// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventsScreen Component renders correctly 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <Header
    backgroundColor="#2d2f7f"
  >
    <ContentPadding
      padding={Object {}}
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "center",
        }
      }
    >
      <Text
        color="blackColor"
        markdown={false}
        markdownStyle={Object {}}
        style={
          Object {
            "color": "#ffffff",
          }
        }
        type="h2"
      >
        Saved Events
      </Text>
    </ContentPadding>
  </Header>
  <EventList
    addSavedEvent={[Function]}
    events={
      Array [
        Object {
          "name": "super duper event",
        },
      ]
    }
    getAssetUrl={[Function]}
    locale="en-GB"
    onPress={[Function]}
    onRefresh={[Function]}
    refreshing={false}
    removeSavedEvent={[Function]}
    savedEvents={Set {}}
  />
</Component>
`;

exports[`EventsScreen Component renders no saved events screen when there are no events 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <Header
    backgroundColor="#2d2f7f"
  >
    <ContentPadding
      padding={Object {}}
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "center",
        }
      }
    >
      <Text
        color="blackColor"
        markdown={false}
        markdownStyle={Object {}}
        style={
          Object {
            "color": "#ffffff",
          }
        }
        type="h2"
      >
        Saved Events
      </Text>
    </ContentPadding>
  </Header>
  <NoSavedEvents
    navigation={
      Object {
        "navigate": [Function],
      }
    }
  />
</Component>
`;
